--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <p>A file dialog will open when the video has finished downloading</p>
 
-        <p><a href="https://github.com/Qxe5/YoutubeDL.tor">Source Code</a></p>
+        <p><a href="https://github.com/Qxe5/YoutubeDL.tor">GitHub Repo</a></p>
     </div>
 </body>
 
