serve video inline and not as an attachment

--- a/video.html
+++ b/video.html
@@ -16,8 +16,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            text-align: center;
-            color: white;
         }
 
         a {
@@ -28,14 +26,9 @@
 
 <body>
     <div>
-        <h1>YoutubeDL.tor</h1>
+        <video controls autoplay muted src="%FILENAME" width="800" height="600"></video>
 
-        <form method="get" action="/dl">
-            <input name="url" type="text" size="40">
-            <input type="submit" value="Download">
-        </form>
-
-        <p><a href="https://github.com/Qxe5/YoutubeDL.tor">GitHub Repo</a></p>
+        <p><a href="/">Return Home</a></p>
     </div>
 </body>
 
