--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         a {
-            color: white;
+            color: red;
         }
     </style>
 </head>
@@ -35,7 +35,7 @@
             <input type="submit" value="Download">
         </form>
 
-        <p><a href="https://github.com/Qxe5/YoutubeDL.tor">GitHub Repo</a></p>
+        <p><a href="https://github.com/Qxe5/YoutubeDL.tor">GitHub Repo (Clearnet)</a></p>
     </div>
 </body>
 
