add video deletion info

--- a/video.html
+++ b/video.html
@@ -28,7 +28,7 @@
     <div>
         <video controls autoplay muted src="%FILENAME" width="800" height="600"></video>
 
-        <p><a href="/">Return Home</a></p>
+        <p>The video is deleted from the servers encrypted disk when it is fully buffered or if you close this page <a href="/">Return Home</a></p>
     </div>
 </body>
 
