add program purpose

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div>
         <h1>YoutubeDL.tor</h1>
 
+        <p>A no JS web front end for youtube-dl</p>
+
         <form method="get" action="/dl">
             <input name="url" type="text" size="40">
             <input type="submit" value="Download">
