--- a/video.html
+++ b/video.html
@@ -29,7 +29,7 @@
     <div>
         <video controls autoplay muted src="%FILENAME" width="800" height="600"></video>
 
-        <p>The video is deleted from the servers encrypted disk when it is fully buffered or if you close this page <a href="/">Return Home</a></p>
+        <p><a href="/">Return Home</a>  The video is deleted from the servers encrypted disk when it is fully buffered or if you close this page</p>
     </div>
 </body>
 
