--- a/video.html
+++ b/video.html
@@ -27,8 +27,8 @@
 
 <body>
     <div>
-        <pre>In 'Safer' and 'Safest' mode the video will be blocked, only the mp4 file needs to be allowed which is not a script</pre>
-        
+        <pre>In 'Safer' and 'Safest' mode the video will be blocked, <b>only</b> the mp4 file needs to be allowed which is not a script</pre>
+
         <video controls autoplay muted src="%FILENAME" width="640" height="360"></video>
 
         <p><a href="/">Return Home</a></p>
