--- a/video.html
+++ b/video.html
@@ -27,12 +27,11 @@
 
 <body>
     <div>
-        <pre>In 'Safer' and 'Safest' mode the video will be blocked, <b>only</b> the mp4 file needs to be allowed which is not a script</pre>
-
         <video controls autoplay muted src="%FILENAME" width="640" height="360"></video>
 
         <p><a href="/">Return Home</a></p>
-        <pre>The video is deleted from the servers encrypted disk when it is fully buffered or if you close this page</pre>
+        <p>In 'Safer' and 'Safest' mode the video will be blocked, <b>only</b> the mp4 file needs to be allowed which is not a script</p>
+        <p>The video is deleted from the servers encrypted disk when it is fully buffered or if you close this page</p>
     </div>
 </body>
 
